containers/media-server/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "32Gi"
              cpu: "5000m"
          ports:
            - containerPort: 8096
              name: tcp-server
