containers/media-server/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: tcp
      port: 80
      targetPort: 8096
